# hermes-autoresearch

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  hermes.skill.yaml  pyproject.toml
.github/workflows/: ci.yml
.hermes/skills/hermes-autoresearch/: SKILL.md
.hermes/skills/hermes-autoresearch/templates/: codex_task.md  report.md  run_config.yaml
docs/: hermes-autoresearch.md
examples/: autoresearch.generic-python.yaml  autoresearch.trading-harness.yaml
scripts/: __init__.py  hermes_autoresearch.py  hermes_autoresearch_report.py  hermes_autoresearch_score.py  install_hermes_skill.py
tests/: test_hermes_autoresearch_cli_e2e.py  test_hermes_autoresearch_safety.py  test_hermes_autoresearch_score.py  test_install_hermes_skill.py
