[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "hermes-autoresearch"
version = "0.1.0"
description = "Hermes Agent autoresearch supervisor using Codex CLI workers."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
  { name = "Hermes Autoresearch Contributors" }
]
dependencies = [
  "PyYAML>=6.0"
]
keywords = ["hermes", "codex", "autoresearch", "testing", "automation"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Software Development :: Testing",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0"
]

[project.scripts]
hermes-autoresearch = "scripts.hermes_autoresearch:main"
hermes-autoresearch-install-skill = "scripts.install_hermes_skill:main"

[project.urls]
Homepage = "https://github.com/scottiesan/hermes-autoresearch"
Repository = "https://github.com/scottiesan/hermes-autoresearch"
"Hermes Agent" = "https://github.com/nousresearch/hermes-agent"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.setuptools]
packages = ["scripts"]
